# x12

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
crates/xserver/: Cargo.toml
crates/xserver-core/: Cargo.toml
crates/xserver-core/src/: crossings.rs  dri3.rs  lib.rs  nested.rs  present_scheduler.rs  properties.rs  randr.rs  resources.rs  server.rs  unix_fd.rs
crates/xserver-core/src/backend/: handles.rs  mod.rs  params.rs  recording.rs  trait_def.rs
crates/xserver-core/src/core_loop/: client_io.rs  client_reader.rs  damage_fanout.rs  fanout.rs  key_fanout.rs  message.rs  mod.rs  pointer_fanout.rs  poll_tokens.rs  process_disconnect.rs  process_request.rs  run.rs  sender.rs  setup_thread.rs  xi1_focus.rs  xi1_state_notify.rs
crates/xserver-core/src/host_x11/: mod.rs  request.rs  trait_impl.rs
crates/xserver-core/src/xinput/: mod.rs
crates/xserver-protocol/: Cargo.toml
crates/xserver/src/: input_thread.rs  launch.rs  lib.rs
crates/xserver/src/drm/: buffer.rs  mod.rs  page_flip.rs  swapchain.rs
crates/xserver/src/input/: context.rs  event.rs  leds.rs  libinput_config.rs  mod.rs
crates/xserver/src/kms/: console.rs  core.rs  cpu_types.rs  mod.rs  render_node.rs  xkb.rs  xshmfence.rs
crates/xserver/src/kms/v2/: backend.rs  cursor.rs  engine.rs  frame_builder.rs  glyph_atlas.rs  owned_semaphore.rs  platform.rs  present_completion.rs  scene.rs  store.rs  stroke.rs  submit_group.rs  submit_trace.rs
crates/xserver/src/kms/vk/: compositor.rs  copy_scratch.rs  dri3.rs  dst_readback.rs  glyph.rs  gradient.rs  logic_fill_pipeline.rs  mask_scratch.rs  mod.rs  pixmap_pool.rs  render_pipeline.rs  sync.rs  target.rs  text_pipeline.rs
crates/xserver/src/kms/vk/ops/: image.rs  mod.rs  render.rs  traps.rs
crates/xserver/src/kms/vk/shaders/: composite.frag.glsl  composite.vert.glsl  logic_fill.frag.glsl  logic_fill.vert.glsl  render.vert.glsl  text.frag.glsl  text.vert.glsl  trap.frag.glsl  triangle.vert.glsl
crates/xserver/src/present/: event_loop.rs  mod.rs  paint.rs
crates/xserver/src/seat/: mod.rs  state.rs
crates/xserver/tests/: dri3_fd_leak.rs  glx_tfp_export.rs  v2_acceptance.rs
crates/xserver/tests/common/: mod.rs
crates/yserver/: Cargo.toml  build.rs
crates/yserver-core/: Cargo.toml
crates/yserver-core/src/: crossings.rs  host_x11.rs  lib.rs  nested.rs  randr.rs  resources.rs  server.rs  unix_fd.rs
crates/yserver-protocol/: Cargo.toml
crates/yserver-protocol/src/: x11.rs
crates/yserver/src/: clock.rs  input_thread.rs  lib.rs  version.rs
crates/yserver/src/drm/: buffer.rs  device.rs  modeset.rs  page_flip.rs  swapchain.rs
crates/yserver/src/input/: context.rs  event.rs  hotkey.rs  libinput_config.rs  mod.rs
crates/yserver/src/kms/: backend.rs  compositor.rs  console.rs  core.rs  cursor_plane.rs  dispatch.rs  event.rs  fonts.rs  mod.rs  render.rs  xkb.rs
crates/yserver/src/kms/scheduler/: batch_descriptor_arena.rs  batch_upload_arena.rs  composite_pool_ring.rs  damage.rs  in_flight.rs  mod.rs  output_frame.rs  paint_batch.rs
crates/yserver/src/kms/v2/: backend.rs  batch_resource.rs  completion_poller.rs  composite_pool_ring.rs  cursor.rs  descriptor_pool_ring.rs  engine.rs  frame_builder.rs  glyph_atlas.rs  mod.rs  platform.rs  present_completion.rs  scene.rs  store.rs  submit_group.rs  submit_trace.rs  telemetry.rs
crates/yserver/src/kms/vk/: call_stats.rs  compositor.rs  copy_scratch.rs  device.rs  dri3.rs  dst_readback.rs  glyph.rs  gradient.rs  instance.rs  logic_fill_pipeline.rs  mask_scratch.rs  memory.rs  mod.rs  pipeline.rs  pixmap_pool.rs  render_pipeline.rs  scanout.rs  target.rs  text_pipeline.rs  trap_pipeline.rs
crates/yserver/src/kms/vk/ops/: copy.rs  fill.rs  image.rs  mod.rs  render.rs  text.rs  traps.rs
crates/yserver/src/kms/vk/shaders/: composite.frag.glsl  composite.vert.glsl  render.frag.glsl  text.vert.glsl  trap.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
crates/yserver/src/present/: event_loop.rs  state.rs
crates/yserver/src/seat/: mod.rs
crates/yserver/tests/: alpha_invariant.rs  fixture_smoke.rs  glx_tfp_export.rs  pixmap_pool_burst.rs  v2_acceptance.rs
crates/yserver/tests/common/: mod.rs  server_fixture.rs
docs/: bsd-support.md  extensions.txt  high-level-design.md  known-issues.md  nvidia.txt  protocol-audit-2026-05-19.md  root-resize-probe.py  status-archive-2026-05-13.md  status-archive-2026-05-15.md  status.md  test-status.md  wip-cow-shadow-hunt-2026-05-20.md  wip-texture-from-pixmap-assessment-2026-05-20.md  wip-tray-applets-investigation-2026-05-20-pm.md  xts-baseline-summary.txt  xts-baseline.md
docs/plans/: 2026-05-04-phase6-6-render-completion.md  2026-05-04-software-cursor.md
docs/superpowers/: 2026-05-18-stage-4d-compose-debug-checkpoint.md
docs/superpowers/findings/: 2026-05-31-render-source-picture-redirect.md  2026-06-01-tray-loop-emit-site-confirmed.md  2026-06-09-cow-structural-results.md  2026-06-09-glx-tfp-radv-export-rootcause.md
docs/superpowers/notes/: 2026-05-07-phase6-10-validation.md  2026-05-07-phase6-10-vng-recipe.md
docs/superpowers/plans/: 2026-04-29-copyarea-putimage.md  2026-04-29-phase1-outstanding.md  2026-04-30-phase2-wrap-up.md  2026-04-30-phase3-2-advanced-interoperability.md  2026-04-30-phase3-3-wm-validation-followups.md  2026-05-02-phase3-6-plan.md  2026-05-03-phase6-2-backend-trait.md  2026-05-03-phase6-3-pump-sink-rework.md  2026-05-04-phase6-4-kms-backend.md  2026-05-05-phase67-full-x11-pass.md  2026-05-06-be-client-support.md  (+52 more)
tools/: amdgpu-bo-placement.sh  debug-xts-case-hw.sh  debug-xts-case-vng.sh  e16-vng-probe.sh  e16-vng-strace.sh  e16-vng-strace2.sh  e16-vng-trace-xephyr.sh  e16-vng-trace.sh  e16-vng-xephyr-control.sh  fontset-dump-trace.sh  fontset-probe.c  fontset-trace-xephyr.sh  fontset-trace-yserver.sh  fontset-vng-test.sh  glx-cfgdump.c  glx-tfp-probe.c  picom-yserver.sh  profile-mate.sh  rendercheck.sh  run-xfill-diag.sh  vng-mate-smoke.sh  xid-exhaust-probe.c  xkb-names-vng-test.sh  xts-run.sh  xts-xlib-sweep.sh  yserver-vng-run.sh
(+97 files in other folders)
