[workspace]
resolver = "3"
members = [
  "crates/yserver",
  "crates/yserver-core",
  "crates/yserver-protocol",
]

[workspace.package]
version = "1.1.0"
edition = "2024"
repository = ""
license = "MIT"

[workspace.dependencies]
ash = "0.38"
crossbeam-channel = "0.5"
drm = "0.15"
env_logger = "0.11"
freetype-rs = "0.38"
gpu-allocator = { version = "0.28", default-features = false, features = [
  "std",
  "vulkan"
] }
input = "0.10"
libc = "0.2"
log = "0.4"
mio = { version = "1", features = ["net", "os-ext", "os-poll"] }
nix = { version = "0.31", features = [
  "event",
  "fs",
  "ioctl",
  "mman",
  "poll",
  "signal",
  "socket",
  "term"
] }
signal-hook = "0.4"
thiserror = "2"
xkbcommon = "0.9"
yserver-core = { path = "crates/yserver-core" }
yserver-protocol = { path = "crates/yserver-protocol" }

[workspace.lints.clippy]
# X11 protocol encoders and request handlers naturally take many
# parameters (one per wire field). Wrapping them in structs adds churn
# without aiding readability — the parameter list mirrors the spec.
too_many_arguments = "allow"

# Keep DWARF unwind info in release builds so `perf record --call-graph
# dwarf` can resolve Rust frames. Without this, ~65% of samples in a
# release-build flamegraph land in [unknown] frames. Optimisation level
# and codegen are unchanged — only the debug-info section grows
# (binary ~3-4x bigger, runtime perf identical).
#
# For profiling work that needs reliable stack walking, also rebuild
# with frame pointers and use `perf record --call-graph fp`:
#
#   RUSTFLAGS="-C force-frame-pointers=yes" cargo build --release -p yserver
#   perf record -F 999 -p $(pgrep yserver) -g --call-graph fp ...
#
# DWARF unwinding without frame pointers reads a stack snapshot and
# reconstructs frames from CFI; it fails partway through inlined
# Rust call chains and produces [unknown] frames. Frame pointers
# (~1-2% runtime cost) make the unwind path infallible.
[profile.release]
debug = true
