[workspace]
resolver = "3"
members = [
  "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/systemrustd/x12"
license = "MIT"

[workspace.dependencies]
# FIXME: use latest ash, as it hasn't had a release since 2024
ash = { git = "https://github.com/ash-rs/ash" } 
skrifa = { version = "0.43.2", default-features = false, features = ["autohint_shaping", "libm"] }
harfrust = { version = "0.9.0", default-features = false, features = ["libm"] }
crossbeam-channel = "0.5"
drm = "0.15"
env_logger = "0.11"
uuid = { version = "1.23.3", default-features = false, features = ["v4"] }
gpu-allocator = { version = "0.28", default-features = false, features = [
  "std",
  "vulkan"
] }
input = "0.10"
libc = "0.2"
log = "0.4"
mio = { version = "1", features = ["net", "os-ext", "os-poll"] }
rustix = { version = "1.1.4", default-features = false, features = [
  "event",
  "fs",
  "mm",
  "net",
  "pipe",
  "process",
  "stdio",
  "termios",
] }
nix = { version = "0.31", features = [
  "event",
  "fs",
  "ioctl",
  "mman",
  "poll",
  "signal",
  "socket",
  "term"
] }
signal-hook = "0.4"
thiserror = "2"
xkbcommon = "0.9"
x12-core = { path = "crates/xserver-core" }
x12-protocol = { path = "crates/xserver-protocol" }
fontconfig = "0.11.0"
libseat = "0.2.4"

[workspace.lints.clippy]
# X11 protocol encoders and request handlers naturally take many
# parameters (one per wire field). Wrapping them in structs adds churn
# without aiding readability — the parameter list mirrors the spec.
too_many_arguments = "allow"

# Keep DWARF unwind info in release builds so `perf record --call-graph
# dwarf` can resolve Rust frames. Without this, ~65% of samples in a
# release-build flamegraph land in [unknown] frames. Optimisation level
# and codegen are unchanged — only the debug-info section grows
# (binary ~3-4x bigger, runtime perf identical).
#
# For profiling work that needs reliable stack walking, also rebuild
# with frame pointers and use `perf record --call-graph fp`:
#
#   RUSTFLAGS="-C force-frame-pointers=yes" cargo build --release -p yserver
#   perf record -F 999 -p $(pgrep yserver) -g --call-graph fp ...
#
# DWARF unwinding without frame pointers reads a stack snapshot and
# reconstructs frames from CFI; it fails partway through inlined
# Rust call chains and produces [unknown] frames. Frame pointers
# (~1-2% runtime cost) make the unwind path infallible.
[profile.release]
debug = "line-tables-only" 
split-debuginfo = "packed"
lto = "thin"
opt-level = 3

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "packed"
opt-level = 1

[profile.dev.package."*"]
debug = false
opt-level = 3
