[package]
name = "x12-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
x12-protocol.workspace = true
log.workspace = true
libc.workspace = true
crossbeam-channel.workspace = true
mio.workspace = true

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
