[package]
name = "x12-xserver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "xserver"
path = "src/lib.rs"

[dependencies]
x12-core.workspace = true
x12-protocol.workspace = true
crossbeam-channel.workspace = true
env_logger.workspace = true
log.workspace = true
libc.workspace = true
drm.workspace = true
input = { workspace = true, optional = true }
nix.workspace = true
rustix.workspace = true
signal-hook.workspace = true
skrifa.workspace = true
harfrust.workspace = true
xkbcommon.workspace = true
fontconfig = { workspace = true, optional = true }
libseat = { workspace = true, optional = true }
ash.workspace = true
gpu-allocator.workspace = true
thiserror.workspace = true

[features]
default = []
libinput = ["input"]

[[bin]]
name = "xnest"
path = "src/bin/xnest.rs"

[[bin]]
name = "xserver"
path = "src/bin/xserver.rs"

[lints]
workspace = true
