[package]
name = "yserver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
yserver-core.workspace = true
env_logger.workspace = true
log.workspace = true

[[bin]]
name = "ynest"
path = "src/bin/ynest.rs"

[[bin]]
name = "yserver"
path = "src/bin/yserver.rs"
