[package]
name = "yserver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "yserver"
path = "src/lib.rs"

[dependencies]
yserver-core.workspace = true
yserver-protocol.workspace = true
crossbeam-channel.workspace = true
env_logger.workspace = true
log.workspace = true
libc.workspace = true
drm.workspace = true
input.workspace = true
nix.workspace = true
signal-hook.workspace = true
pixman.workspace = true
freetype-rs.workspace = true
xkbcommon.workspace = true

[[bin]]
name = "ynest"
path = "src/bin/ynest.rs"

[[bin]]
name = "yserver"
path = "src/bin/yserver.rs"

[lints]
workspace = true
